--- a/app/src/main/res/layout/activity_section_f6_s5.xml
+++ b/app/src/main/res/layout/activity_section_f6_s5.xml
@@ -166,13 +166,15 @@
                     </LinearLayout>
 
                     <RadioGroup
+                        android:orientation="horizontal"
                         android:id="@+id/f6502"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
                         <RadioButton
                             android:id="@+id/f6502a"
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
                             android:layout_height="wrap_content"
                             android:checked="@{form.f6502.equals(`1`)}"
                             android:onClick="@{()->form.setF6502(`1`)}"
@@ -180,7 +182,8 @@
 
                         <RadioButton
                             android:id="@+id/f6502b"
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
                             android:layout_height="wrap_content"
                             android:checked="@{form.f6502.equals(`2`)}"
                             android:onClick="@{()->form.setF6502(`2`)}"
@@ -188,7 +191,8 @@
 
                         <RadioButton
                             android:id="@+id/f6502c"
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
                             android:layout_height="wrap_content"
                             android:checked="@{form.f6502.equals(`98`)}"
                             android:onClick="@{()->form.setF6502(`98`)}"
@@ -533,6 +537,7 @@
                         </LinearLayout>
 
                         <RadioGroup
+                            android:orientation="horizontal"
                             android:id="@+id/f6506"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -540,7 +545,8 @@
 
                             <RadioButton
                                 android:id="@+id/f6506a"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f6506.equals(`1`)}"
                                 android:onClick="@{()->form.setF6506(`1`)}"
@@ -548,7 +554,8 @@
 
                             <RadioButton
                                 android:id="@+id/f6506b"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f6506.equals(`2`)}"
                                 android:onClick="@{()->form.setF6506(`2`)}"
@@ -593,6 +600,7 @@
                             android:layout_height="wrap_content">
 
                             <TextView
+                                style="@style/sub_labels"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="12dp"
@@ -655,6 +663,7 @@
                                 android:text="@string/f6507g" />
 
                             <TextView
+                                style="@style/sub_labels"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="12dp"
@@ -743,6 +752,7 @@
                         </LinearLayout>
 
                         <RadioGroup
+                            android:orientation="horizontal"
                             android:id="@+id/f6508"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -750,7 +760,8 @@
 
                             <RadioButton
                                 android:id="@+id/f6508a"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f6508.equals(`1`)}"
                                 android:onClick="@{()->form.setF6508(`1`)}"
@@ -758,7 +769,8 @@
 
                             <RadioButton
                                 android:id="@+id/f6508b"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f6508.equals(`2`)}"
                                 android:onClick="@{()->form.setF6508(`2`)}"
@@ -803,13 +815,15 @@
                             </LinearLayout>
 
                             <RadioGroup
+                                android:orientation="horizontal"
                                 android:id="@+id/f6509"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content">
 
                                 <RadioButton
                                     android:id="@+id/f6509a"
-                                    android:layout_width="match_parent"
+                                    android:layout_width="0dp"
+                                    android:layout_weight="1"
                                     android:layout_height="wrap_content"
                                     android:checked="@{form.f6509.equals(`1`)}"
                                     android:onClick="@{()->form.setF6509(`1`)}"
@@ -817,7 +831,8 @@
 
                                 <RadioButton
                                     android:id="@+id/f6509b"
-                                    android:layout_width="match_parent"
+                                    android:layout_width="0dp"
+                                    android:layout_weight="1"
                                     android:layout_height="wrap_content"
                                     android:checked="@{form.f6509.equals(`2`)}"
                                     android:onClick="@{()->form.setF6509(`2`)}"
@@ -934,12 +949,14 @@
                                 android:tag="0">
 
                                 <TextView
+                                    style="@style/sub_labels"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="12dp"
                                     android:text="@string/f6511t1" />
 
                                 <TextView
+                                    style="@style/sub_labels"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="12dp"
@@ -1002,6 +1019,7 @@
                                     android:text="@string/f6511g" />
 
                                 <TextView
+                                    style="@style/sub_labels"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="12dp"
@@ -1204,20 +1222,23 @@
                                 android:text="@string/f6514" />
                         </LinearLayout>
 
+                        <TextView
+                            style="@style/sub_labels"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="12dp"
+                            android:text="@string/f6514t1" />
+
                         <RadioGroup
                             android:id="@+id/f6514"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="12dp"
-                                android:text="@string/f6514t1" />
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
 
                             <RadioButton
                                 android:id="@+id/f6514a"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f6514.equals(`1`)}"
                                 android:onClick="@{()->form.setF6514(`1`)}"
@@ -1225,7 +1246,8 @@
 
                             <RadioButton
                                 android:id="@+id/f6514b"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f6514.equals(`2`)}"
                                 android:onClick="@{()->form.setF6514(`2`)}"
@@ -1302,9 +1324,7 @@
                                 android:maxLength="3"
                                 android:tag="f6515h"
                                 android:text="@={form.f6515hx}"
-
                                 android:visibility='@{f6515h.checked? View.VISIBLE : View.GONE}'
-
                                 app:maxValue="100"
                                 app:minValue="1"
                                 app:type="range" />
@@ -1471,6 +1491,7 @@
                         </LinearLayout>
 
                         <RadioGroup
+                            android:orientation="horizontal"
                             android:id="@+id/f6517"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -1478,7 +1499,8 @@
 
                             <RadioButton
                                 android:id="@+id/f6517a"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f6517.equals(`1`)}"
                                 android:onClick="@{()->form.setF6517(`1`)}"
@@ -1486,7 +1508,8 @@
 
                             <RadioButton
                                 android:id="@+id/f6517b"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:checked="@{form.f6517.equals(`2`)}"
                                 android:onClick="@{()->form.setF6517(`2`)}"
@@ -1662,6 +1685,7 @@
                             </LinearLayout>
 
                             <RadioGroup
+                                android:orientation="horizontal"
                                 android:id="@+id/f6519"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -1669,7 +1693,8 @@
 
                                 <RadioButton
                                     android:id="@+id/f6519a"
-                                    android:layout_width="match_parent"
+                                    android:layout_width="0dp"
+                                    android:layout_weight="1"
                                     android:layout_height="wrap_content"
                                     android:checked="@{form.f6519.equals(`1`)}"
                                     android:onClick="@{()->form.setF6519(`1`)}"
@@ -1677,7 +1702,8 @@
 
                                 <RadioButton
                                     android:id="@+id/f6519b"
-                                    android:layout_width="match_parent"
+                                    android:layout_width="0dp"
+                                    android:layout_weight="1"
                                     android:layout_height="wrap_content"
                                     android:checked="@{form.f6519.equals(`2`)}"
                                     android:onClick="@{()->form.setF6519(`2`)}"
@@ -1884,6 +1910,7 @@
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
                                         android:checked="@{form.f6521j.equals(`10`)}"
+                                        android:enabled="@{!form.f652198.equals(`98`)}"
                                         android:onClick="@{()->form.setF6521j(form.f6521j.equals(`10`)?``:`10`)}"
                                         android:text="@string/f6521j" />
 
@@ -2035,6 +2062,7 @@
                             </LinearLayout>
 
                             <RadioGroup
+                                android:orientation="horizontal"
                                 android:id="@+id/f6523"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -2042,7 +2070,8 @@
 
                                 <RadioButton
                                     android:id="@+id/f6523a"
-                                    android:layout_width="match_parent"
+                                    android:layout_width="0dp"
+                                    android:layout_weight="1"
                                     android:layout_height="wrap_content"
                                     android:checked="@{form.f6523.equals(`1`)}"
                                     android:onClick="@{()->form.setF6523(`1`)}"
@@ -2050,7 +2079,8 @@
 
                                 <RadioButton
                                     android:id="@+id/f6523b"
-                                    android:layout_width="match_parent"
+                                    android:layout_width="0dp"
+                                    android:layout_weight="1"
                                     android:layout_height="wrap_content"
                                     android:checked="@{form.f6523.equals(`2`)}"
                                     android:onClick="@{()->form.setF6523(`2`)}"
